Finish assigment basics requiriments.

--- a/index.html
+++ b/index.html
@@ -3,21 +3,54 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Assignment Solution for Module 3</title>
 </head>
 <body>
 	<header>
-		<nav>Food, LLC</nav>
-	</header>
-	<h1>Our Menu</h1>
+		<nav class="navbar-inverse navbar-static-top visible-xs" role="navigation">
+  			<a class="navbar-brand" href="#">Food, LLC</a>
+  	
+  	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
 
-	Chicken
-
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu placerat dolor, at dictum magna. Sed a leo felis. Aenean quis magna pulvinar, semper mi at, volutpat leo. Etiam nisi purus, elementum ac quam vitae, blandit imperdiet neque. Sed pharetra rhoncus auctor. Integer lacinia dignissim dictum. Quisque ac nunc venenatis, efficitur orci nec, aliquet neque. Donec venenatis lacus sed orci vulputate, eget condimentum urna pulvinar. Nulla molestie dolor et risus sagittis ornare. Curabitur rutrum lacus vel leo porttitor interdum. Integer ut finibus enim. Pellentesque vestibulum nec dui consectetur aliquam. Nullam dictum semper bibendum. Vivamus vel dignissim urna, non pretium leo. Donec faucibus sem a turpis dapibus ullamcorper. </p>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <br class="hidden-xs"> Chicken</a>
+            </li>
+            <li>
+              <a href="#">
+                <br class="hidden-xs"> Beef</a>
+            </li>
+            <li>
+              <a href="#">
+                <br class="hidden-xs"> Sushi</a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
+	<div class=container>
+		<div class="row">
+			<h1>Our Menu</h1>
+			<div class="foodchicken col-md-12 col-sm-12 col-xs-12">
+			<h2>Chicken</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu placerat dolor, at dictum magna. Sed a leo felis. Aenean quis magna pulvinar, semper mi at, volutpat leo. Etiam nisi purus, elementum ac quam vitae, blandit imperdiet neque. Sed pharetra rhoncus auctor. Integer lacinia dignissim dictum. Quisque ac nunc venenatis, efficitur orci nec, aliquet neque. Donec venenatis lacus sed orci vulputate, eget condimentum urna pulvinar. Nulla molestie dolor et risus sagittis ornare. Curabitur rutrum lacus vel leo porttitor interdum. Integer ut finibus enim. Pellentesque vestibulum nec dui consectetur aliquam. Nullam dictum semper bibendum. Vivamus vel dignissim urna, non pretium leo. Donec faucibus sem a turpis dapibus ullamcorper. </p>
+			</div>
+		</div>
+	</div>	
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
